syntax = "proto3";      //设置使用proto3，注意要写在第一行

import "CanalParameterProtocol.proto";

//设置生成的class所属的JAVA包
option java_package = "com.alibaba.otter.canal.instance.manager.protocol";
//设置生成的JAVA的类名
option java_outer_classname = "CanalModelPacket";

// 这个可以省略，因为本来默认就是SPEED的，也建议采用这种option
option optimize_for = SPEED;


enum CanalStatusMessage{
    START=0;
    STOP=1;
}

message CanalModelMessage{
    int64 id=1;
    string name=2;
    string desc=3;
    CanalStatusMessage status=4;
    CanalParameterMessage canalParameterMessage=5;      //CanalModelPacket中包含CanalParametetPacket
    //两个时间全部用字符串来表示
    string gmtCreate=6;
    string gmtModified=7;

}



